--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
     <!-- paying case -->
     <section>
-        <div class="container-fluid bg-imperial-red" style="padding-top:25px; padding-bottom:25px;">
+        <div class="container-fluid bg-imperial-red" style="padding-top:2px;">
             <div class="row">
                 <div class="p-3 d-flex align-items-center justify-content-center flex-column mx-auto pann">
                     <span class="judul font-weigth-light text-center">Apa yang kamu dapatkan jika Pesan hari ini, Kamu hanya perlu bayar</span>
@@ -490,7 +490,7 @@
 
     <!-- footer -->
     <footer>
-        <div class="container-fluid bg-light-gray" style="padding-top:50px; padding-bottom:25px;">
+        <div class="container-fluid bg-light-gray" style="padding-top:15px;">
             <div class="row">
                 <div class="d-flex align-items-center justify-content-center flex-column">
                     <img class="text-center img-fluid img-icon mx-auto d-block" src="./images/logo.png" alt="">
