--- a/index.html
+++ b/index.html
@@ -491,13 +491,13 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid bg-light-gray" style="padding-top:15px;">
-            <div class="row">
-                <div class="d-flex align-items-center justify-content-center flex-column">
+            <div class="d-flex align-items-center justify-content-center flex-column">
+                <div class="pan2">
                     <img class="text-center img-fluid img-icon mx-auto d-block" src="./images/logo.png" alt="">
                 </div>
             </div>
-            <div class="row">
-                <div class="d-flex align-items-center justify-content-center flex-column">
+            <div class="d-flex align-items-center justify-content-center flex-column">
+                <div class="pan2">
                     <p class="text-center caption">© Copyright 2020. All rights reserved.</p>
                 </div>
             </div>
