--- a/index.html
+++ b/index.html
@@ -472,13 +472,13 @@
             </div>
             <div class="row">
                 <form class="" action="checkout.html">
-                    <div class="con p-3 d-flex align-items-center justify-content-center flex-column">
-                        <button class="btn btn-success btn-lg btn-block light-gray pann" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
+                    <div class="d-flex align-items-center justify-content-center flex-column">
+                        <button class="btn btn-success btn-lg btn-block light-gray pan2" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
             </div>
             <div class="row">
-                <div class="text-center p-3 d-flex align-items-center justify-content-center flex-column">
+                <div class="d-flex align-items-center justify-content-center flex-column p-3">
                     <span class="silver-chalice caption">(Kamu hemat Rp 50.000,-)</span>
                     <span class="silver-chalice caption">*Harga di atas termasuk 1 pc case HP design*</span>
                 </div>
