--- a/index.html
+++ b/index.html
@@ -457,14 +457,14 @@
 
     <!-- paying case -->
     <section>
-        <div class="container-fluid bg-imperial-red" style="padding-top:2px;">
+        <div class="container-fluid bg-imperial-red" style="padding-top:15px;">
             <div class="row">
                 <div class="p-3 d-flex align-items-center justify-content-center flex-column mx-auto pann">
                     <span class="judul font-weigth-light text-center">Apa yang kamu dapatkan jika Pesan hari ini, Kamu hanya perlu bayar</span>
                 </div>
             </div>           
             <div class="row">
-                <div class="p-3 d-flex align-items-center justify-content-center flex-column">
+                <div class="p-3 d-flex align-items-center justify-content-center flex-column mx-auto pann">
                     <span class="text-center h4"><s>Senilai Rp 150.000,-</s></span><br>
                     <span class="text-center silver-chalice h1"><strong>Rp 100.000,-</strong></span> <br>
                     <span class="text-center h4"><strong>1 PC EKSKLUSIF 3D CASE HIGH GRADE LIMITED EDITION</strong></span>
@@ -472,19 +472,19 @@
             </div>
             <div class="row">
                 <form class="" action="checkout.html">
-                    <div class="d-flex align-items-center justify-content-center flex-column">
+                    <div class="d-flex align-items-center justify-content-center flex-column mx-auto pann">
                         <button class="btn btn-success btn-lg btn-block light-gray pan2" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
             </div>
             <div class="row">
-                <div class="d-flex align-items-center justify-content-center flex-column p-3">
+                <div class="d-flex align-items-center justify-content-center flex-column p-3 mx-auto pann">
                     <span class="silver-chalice caption">(Kamu hemat Rp 50.000,-)</span>
                     <span class="silver-chalice caption">*Harga di atas termasuk 1 pc case HP design*</span>
                 </div>
             </div>
         </div>
-    </section>    
+    </section>     
 
 
 
