--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="row">
                 <form class="" action="checkout.html">
                     <div class="d-flex align-items-center justify-content-center flex-column mx-auto pann">
-                        <button class="btn btn-success btn-lg btn-block light-gray pan2" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
+                        <button class="btn btn-success btn-lg btn-block light-gray pann" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
             </div>
