--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             </div>
             <div class="row">
                 <form class="" action="checkout.html">
-                    <div class="p-3 d-flex align-items-center justify-content-center flex-column mx-auto">
+                    <div class="d-flex align-items-center justify-content-center flex-column mx-auto">
                         <button class="btn btn-success btn-lg btn-block light-gray pan2" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
