--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
             </div>
             <div class="row">
                 <form class="" action="checkout.html">
-                    <div class="d-flex align-items-center justify-content-center flex-column mx-auto">
-                        <button class="btn btn-success btn-lg btn-block light-gray pan2" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
+                    <div class="text-center d-flex align-items-center justify-content-center flex-column mx-auto">
+                        <button class="pan2 btn btn-success btn-lg btn-block light-gray" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
             </div>
