--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
                     <span class="text-center h4"><strong>1 PC EKSKLUSIF 3D CASE HIGH GRADE LIMITED EDITION</strong></span>
                 </div>
             </div>
-            <div class="row-3">
+            <div class="row">
                 <form class="" action="checkout.html">
-                    <div class="p-3 text-center d-flex align-items-center justify-content-center flex-column mx-auto pan2">
+                    <div class="d-flex align-items-center justify-content-center flex-column">
                         <button class="pan2 btn btn-success btn-lg btn-block light-gray" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
                     </div>   
                 </form>
