--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <span class="text-center h4"><strong>1 PC EKSKLUSIF 3D CASE HIGH GRADE LIMITED EDITION</strong></span>
                 </div>
             </div>
-            <div class="row">
+            <div class="row-3">
                 <form class="" action="checkout.html">
                     <div class="p-3 text-center d-flex align-items-center justify-content-center flex-column mx-auto pann">
                         <button class="pann btn btn-success btn-lg btn-block light-gray" type="submit"><i class="fa fa-location-arrow"> </i> Beli Sekarang Klik Disini</button>
