--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 </form>
             </div>
             <div class="row">
-                <div class="d-flex align-items-center justify-content-center flex-column p-3 mx-auto pann">
+                <div class="d-flex align-items-center justify-content-center flex-column p-3 mx-auto">
                     <span class="silver-chalice caption">(Kamu hemat Rp 50.000,-)</span>
                     <span class="silver-chalice caption">*Harga di atas termasuk 1 pc case HP design*</span>
                 </div>
